--- a/index.html
+++ b/index.html
@@ -102,19 +102,19 @@
     <section class="section-partners">
       <div class="container-partners">
         <h5 class="partners-title">As featured in:</h5>
-        <img src="assets/images/img_partner1.png" alt="" class="img--partner" />
+        <img src="./assets/images/img_partner1.png" alt="" class="img--partner" />
         <img
-          src="/assets/images/img_partner2.png"
+          src="./assets/images/img_partner2.png"
           alt=""
           class="img--partner"
         />
         <img
-          src="/assets/images/img_partner3.png"
+          src="./assets/images/img_partner3.png"
           alt=""
           class="img--partner"
         />
         <img
-          src="/assets/images/img_partner4.png"
+          src="./assets/images/img_partner4.png"
           alt=""
           class="img--partner"
         />
@@ -162,7 +162,7 @@
     </section>
     <section class="section-white">
       <div class="container-white">
-        <img src="/assets/images/section-white.jpg" alt="" />
+        <img src="./assets/images/section-white.jpg" alt="" />
         <div class="container-white__content">
           <div class="white__content--title">
             <h1>Discover how we can help you to grow your business fast.</h1>
@@ -233,7 +233,7 @@
             </div>
           </div>
         </div>
-        <img src="/assets/images/section-grey2.jpg" alt="" />
+        <img src="./assets/images/section-grey2.jpg" alt="" />
       </div>
     </section>
     <section class="section-bg1">
