--- a/index.html
+++ b/index.html
@@ -102,7 +102,11 @@
     <section class="section-partners">
       <div class="container-partners">
         <h5 class="partners-title">As featured in:</h5>
-        <img src="./assets/images/img_partner1.png" alt="" class="img--partner" />
+        <img
+          src="./assets/images/img_partner1.png"
+          alt=""
+          class="img--partner"
+        />
         <img
           src="./assets/images/img_partner2.png"
           alt=""
@@ -121,7 +125,7 @@
       </div>
     </section>
     <section class="section-grey">
-      <div class="container-grey--title">
+      <div class="container-grey__title">
         <h1>WHAT WE DO</h1>
         <p>Dicover how our amazing team can help your business.</p>
       </div>
@@ -246,33 +250,147 @@
           <div class="facts-box">
             <i class="fa-solid fa-gem"></i>
             <span class="facts__number">1050+</span>
-            <p class="facts__title">
-              Projects Completed
-            </p>
+            <p class="facts__title">Projects Completed</p>
           </div>
           <div class="facts-box">
             <i class="fa-solid fa-heart"></i>
             <span class="facts__number">217k</span>
-            <p class="facts__title">
-              Happy Clients
-            </p>
+            <p class="facts__title">Happy Clients</p>
           </div>
           <div class="facts-box">
             <i class="fa-solid fa-award"></i>
             <span class="facts__number">1210</span>
-            <p class="facts__title">
-              Design Awards
-            </p>
+            <p class="facts__title">Design Awards</p>
           </div>
           <div class="facts-box">
             <i class="fa-solid fa-anchor"></i>
             <span class="facts__number">2137</span>
-            <p class="facts-title">
-              Line Of Codes
-            </p>
+            <p class="facts__title">Line Of Codes</p>
           </div>
         </div>
       </div>
+    </section>
+    <section class="section-grey3">
+      <div class="container-grey3">
+        <div class="container-grey3__left">
+          <h2>What People Are Saying</h2>
+          <p>
+            Quis autem velis ets reprehender net etid quiste nets voluptate.
+            Utise wisi enim minim veniam, quis etsad aspernatis netsum stationes
+            nets.
+          </p>
+          <div class="rating-grey3">
+            <div class="testim-platform first">
+              <p>TrustPilot</p>
+              <div class="testim__rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+              </div>
+            </div>
+            <div class="testim-platform">
+              <p>Feefo</p>
+              <div class="testim__rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container-grey3__right">
+          <div class="list-card">
+            <div class="card">
+              <div class="card-body">
+                Nemo enim ipsam voluptatem quia voluptas situm ets aspernatis
+                netsum loris fugit, sed quia magni dolores eos quis ratione
+                sequi etum nets vesciunt neque.
+              </div>
+              <div class="card-header">
+                <button class="card-header__button">
+                  <img
+                    src="./assets/images/section_grey3_img1.jpg"
+                    alt=""
+                    class="testim-img"
+                  />
+                  <p class="testim-name">
+                    Alexandra Smith /
+                    <span>Manager - SmartCoders</span>
+                  </p>
+                </button>
+              </div>
+            </div>
+            <div class="card">
+              <!-- <div class="card-body">
+                Nemo enim ipsam voluptatem quia voluptas situm ets aspernatis netsum loris fugit, sed quia magni dolores eos quis ratione sequi etum nets vesciunt neque.               
+              </div> -->
+              <div class="card-header">
+                <button class="card-header__button">
+                  <img
+                    src="./assets/images/section_grey3_img2.jpg"
+                    alt=""
+                    class="testim-img"
+                  />
+                  <p class="testim-name">
+                    John Doe /
+                    <span>CEO - Epic Design</span>
+                  </p>
+                </button>
+              </div>
+            </div>
+            <div class="card">
+              <!-- <div class="card-body">
+                Nemo enim ipsam voluptatem quia voluptas situm ets aspernatis netsum loris fugit, sed quia magni dolores eos quis ratione sequi etum nets vesciunt neque.               
+              </div> -->
+              <div class="card-header">
+                <button class="card-header__button">
+                  <img
+                    src="./assets/images/section_grey3_img3.jpg"
+                    alt=""
+                    class="testim-img"
+                  />
+                  <p class="testim-name">
+                    Christina Pages /
+                    <span>Designer - New Fashion</span>
+                  </p>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section-white2">
+      <div class="container-white2__title">
+        <h2>Our Portfolio</h2>
+        <p>Dicover the latest projects accomplished for my clients.</p>
+      </div>
+      <div class="container-gallery">
+        <div class="item-gallery">
+          <div class="item1">
+            <a href=""><img src="./assets/images/section-white2-1.jpg" alt=""></a>
+          </div>
+          <div class="item1">
+            <a href=""><img src="./assets/images/section-white2-2.jpg" alt=""></a>
+          </div>
+        </div>
+        <div class="item-gallery">
+          <div class="item1">
+            <a href=""><img src="./assets/images/section-white2-3.jpg" alt=""></a>
+          </div>
+        </div>
+        <div class="item-gallery">
+          <div class="item1">
+            <a href=""><img src="./assets/images/section-white2-4.jpg" alt=""></a>
+          </div>
+          <div class="item1">
+            <a href=""><img src="./assets/images/section-white2-5.jpg" alt=""></a>
+          </div>
+        </div>
     </section>
   </body>
 </html>
