--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     href="https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Nunito&family=Open+Sans:wght@300&display=swap"
     rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="./assets/styles/animate.css">
   <link
 			rel="stylesheet"
@@ -37,15 +36,15 @@
       <div class="nav__right">LaunchPage</div>
       <div class="nav__left">
         <ul class="nav_left--item">
-          <li><a class="active" href="#home" class="nav-link"></a>Home</li>
-          <li><a href="#about" class="nav-link"></a> About</li>
-          <li><a href="#test" class="nav-link"></a> Testimonials</li>
-          <li><a href="#work" class="nav-link"></a> Work</li>
-          <li><a href="#team" class="nav-link"></a> Team</li>
-          <li><a href="#feature" class="nav-link"></a> Features</li>
-          <li><a href="#pricing" class="nav-link"></a> Pricing</li>
+          <li><a href="#home" >Home</a></li>
+          <li><a href="#about"> About</a></li>
+          <li><a href="#test" >Testimonials</a> </li>
+          <li><a href="#work" >Work</a> </li>
+          <li><a href="#team" >Team</a> </li>
+          <li><a href="#feature" >Features</a> </li>
+          <li><a href="#pricing" >Pricing</a> </li>
           <li class="nav__left--btn">
-            <a href="contact">Get Started</a>
+            <a href="#contact">Get Started</a>
           </li>
         </ul>
       </div>
@@ -555,8 +554,8 @@
     </div>
 
   </section>
-  <section class="section-bg3 section-bg-default">
-    <div id="contact" class="section-bg3-overlay"></div>
+  <section id="contact" class="section-bg3 section-bg-default">
+    <div  class="section-bg3-overlay"></div>
     <div class="container-bg3">
       <div class="container-bg3__title">
         <h2>Contact Us</h2>
